--- a/P.Tejido.html
+++ b/P.Tejido.html
@@ -34,7 +34,7 @@
         <div class="container-navbar">
             <nav class="navbar container">
                 <ul class="menu">
-                    <li><a href="Index.html">Nosotros</a></li>
+                    <li><a href="index.html">Nosotros</a></li>
                     <li><a href="Catalogo.html">Catalogo</a></li>
                     <li><a href="#">Peluches</a>
                         <br>
@@ -579,268 +579,9 @@
             </div>
         </div>
     </div>
-    <br>
-    <div class="container-products">
-        <div class="card-product">
-            <div class="container-img">
-                <img src="img/17p.jpg" alt="peluches pequeños" width="100" height="310"/>
-                <span class="discount"></span>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <h3>Patito </h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$75.90 <span>$80.30</span></p>
-            </div>
-        </div>
-        <div class="card-product">
-            <div class="container-img">
-                <img
-                    src="img/18p.jpg"
-                    alt="peluches tejidos"
-                width="100" height="313"/>
-                <span class="discount"></span>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <h3>Vaca morada</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$80.90 <span>$96.80</span></p>
-            </div>
-        </div>
-        <div class="card-product">
-            <div class="container-img">
-                <img
-                    src="img/19p.jpg"
-                    alt="peluches grandes"
-                width="100" height="312"/>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3>Peluche de hongito</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$170.20</p>
-            </div>
-        </div>
-        <div class="card-product">
-            <div class="container-img">
-                <img src="img/20p.jpg" alt="peluche grande de hongo" width="100" height="312"/>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <h3>Bulbasaur</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$154.60</p>
-            </div>
-        </div>
+
     </div>
-    <br>
-    <div class="container-products">
-        <div class="card-product">
-            <div class="container-img">
-                <img src="img/21p.jpg" alt="peluches pequeños" width="100" height="310"/>
-                <span class="discount">-13%</span>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <h3>Vaquita de arcoiris</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$130.5 <span>$150.</span></p>
-            </div>
-        </div>
-        <div class="card-product">
-            <div class="container-img">
-                <img
-                    src="img/22p.jpg"
-                    alt="peluches tejidos"
-                width="100" height="313"/>
-                <span class="discount">-22%</span>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <h3>Vaquita mostaza</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$150 <span>$117</span></p>
-            </div>
-        </div>
-        <div class="card-product">
-            <div class="container-img">
-                <img
-                    src="img/23p.jpg"
-                    alt="peluches grandes"
-                width="100" height="312"/>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <h3>Rinocerontes</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$170.20</p>
-            </div>
-        </div>
-        <div class="card-product">
-            <div class="container-img">
-                <img src="img/24p.jpg" alt="peluche grande de hongo" width="100" height="312"/>
-                <div class="button-group">
-                    <span>
-                        <i class="fa-regular fa-eye"></i>
-                    </span>
-                    <span>
-                        <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-code-compare"></i>
-                    </span>
-                </div>
-            </div>
-            <div class="content-card-product">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <h3>Peluche de Jirafa</h3>
-                <span class="add-cart">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                </span>
-                <p class="price">$80.60</p>
-            </div>
-        </div>
-    </div>
+
     <br>
     <img class="banner2" src="img/Banner2 tejido.png" alt="banner_inicio">
     <br>
