--- a/Contacto.html
+++ b/Contacto.html
@@ -35,7 +35,7 @@
         <div class="container-navbar">
             <nav class="navbar container">
                 <ul class="menu">
-                    <li><a href="Index.html">Nosotros</a></li>
+                    <li><a href="index.html">Nosotros</a></li>
                     <li><a href="Catalogo.html">Catalogo</a></li>
                     <li><a href="#">Peluches</a>
                         <br>
